--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expree": "^2.1.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
