--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "expree": "^2.1.0",
     "express": "^4.21.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
