--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb+srv://AMpackaging:Web_2025@product.wathg.mongodb.net/?retryWrites=true&w=majority&appName=product
 
 # NODE_ENV=development
-JWT_SECRET=Chetan@_25
+JWT_SECRET=AMpackaging@_25
 PORT=5000
 
 # Vwq6q1gsTsVe2Moz
