--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "expree": "^2.1.0",
     "express": "^4.21.2",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "mongodb": "^6.12.0",
@@ -25,7 +26,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
