--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://AMpackaging:Web_2025@product.wathg.mongodb.net/?retryWrites=true&w=majority&appName=product
 
-FRONTEND_URI=https://a-m-packaging-website.vercel.app/
+REACT_APP_FRONTEND_URI=https://a-m-packaging-website.vercel.app/
 # NODE_ENV=development
 JWT_SECRET=AMpackaging@_25
 PORT=5000
